# TEKNOFEST_IKA_2026

./: .gitignore  README.md  package.xml  run_ika.py  setup.py  start_robot.py
config/: robot_params.yaml
ika_gui/ika_gcs/: main.py  splash_screen.py
ika_gui/ika_gcs/app/: config.py  constants.py
ika_gui/ika_gcs/comm/: tcp_client.py
ika_gui/ika_gcs/ui/: main_window.py  status_bar.py  toolbar.py
ika_gui/ika_gcs/ui/docks/: autonomy_dock.py  connection_dock.py  control_dock.py  khadas_dock.py  log_dock.py  telemetry_dock.py
ika_gui/ika_gcs/ui/pages/: main_page.py  mission_page.py
ika_gui/ika_gcs/ui/panels/: autonomy_panel.py  laser_control_panel.py  left_status_panel.py  manual_drive_panel.py
ika_gui/ika_gcs/ui/theme/: palette.py  styles.qss  theme_manager.py
ika_gui/ika_gcs/ui/widgets/: estop_button.py  gyro_widget.py  indicator.py  joystick.py  map_widget.py  toast.py  video_view.py  video_wall.py
ika_gui/ika_gcs/utils/: logger.py
ika_gui/ika_gcs/workers/: gcs_ros_node.py  telemetry_worker.py
modules/: motor_driver.py  perception.py  pid_thread.py
teknofest_ika/: run_ika.py
teknofest_ika/core/: failsafe.py  vehicle_manager.py
teknofest_ika/launch/: robot_launch.py
teknofest_ika/modules/: __init__.py  motor_driver.py  perception.py  pid_thread.py  serial_comms.py
teknofest_ika/nodes/: brain_node.py  motor_node.py  perception_node.py  sensor_node.py
utils/: camera_handler.py
